# Colecci-n-de-Ejercicios-para-Nociones-Clave

./: CMakeLists.txt  README.md  main.cpp
estudiante/: estudiante.cpp  estudiante.h
nuevo/: nuevo.cpp  nuevo.h
persona/: persona.cpp  persona.h
